--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -39,6 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
                     android:text="@string/now_loading_img"
                     android:textSize="16sp" />
@@ -52,7 +53,7 @@
                 android:layout_gravity="center"
                 android:scaleType="fitCenter" />
 
-            <com.devilsen.emojcreator.widget.DrawEdxtView
+            <devilsen.me.emojicreator.widget.DrawEdxtView
                 android:id="@+id/create_source_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
