--- a/app/src/main/res/layout/activity_emoji_list.xml
+++ b/app/src/main/res/layout/activity_emoji_list.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".modules.ui.SortActivity">
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -43,7 +41,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="10dp"
-                    android:background="@mipmap/ic_search" />
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@mipmap/ic_search" />
             </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
