--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
             android:theme="@style/toolbarTheme"
+            app:popupTheme="@style/Theme.Design.Light"
             app:layout_scrollFlags="scroll|enterAlways" />
 
         <android.support.design.widget.CollapsingToolbarLayout
