--- a/app/src/main/res/layout/item_source.xml
+++ b/app/src/main/res/layout/item_source.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="3dp"
     app:cardElevation="3dp"
     app:contentPadding="5dp">
@@ -14,19 +15,19 @@
 
         <devilsen.me.emojicreator.widget.RatioImageView
             android:id="@+id/list_item_img"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minWidth="100dp"
-            android:minHeight="100dp"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter" />
+            android:minHeight="100dp"
+            android:minWidth="100dp" />
 
         <TextView
             android:id="@+id/list_item_name_txt"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:gravity="center_horizontal" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
