--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.AppBarLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -13,9 +11,9 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         app:layout_scrollFlags="scroll|enterAlways"
-        app:popupTheme="@style/Theme.AppCompat.Light">
+        app:popupTheme="@style/Theme.AppCompat.Light"
+        app:theme="@style/toolbarTheme">
 
     </android.support.v7.widget.Toolbar>
-
 
 </android.support.design.widget.AppBarLayout>
