--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,12 +9,25 @@
 
     </style>
 
-    <style name="toolbarTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:actionOverflowButtonStyle">@style/white.overflow.button</item>
-    </style>
+    <style name="toolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="white.overflow.button" parent="android:style/Widget.Holo.Light.ActionButton.Overflow">
-        <item name="android:src">@mipmap/ic_menu_more_overflow</item>
+    <!-- 所有自定义dialog都需先使用此style new CustomDialog(mContext,R.style.CustomDialog)-->
+    <style name="CustomDialog" parent="@android:style/Theme.Dialog">
+        <!-- 边框 -->
+        <item name="android:windowFrame">@null</item>
+        <!-- 是否浮现在activity之上 -->
+        <item name="android:windowIsFloating">true</item>
+        <!-- 标题 -->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <!-- 背景 -->
+        <item name="android:windowBackground">@drawable/view_dialog_background</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <!-- 半透明 -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- 模糊 -->
+        <item name="android:backgroundDimEnabled">true</item>
     </style>
 
 </resources>
