--- a/app/src/main/res/layout/item_source.xml
+++ b/app/src/main/res/layout/item_source.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground"
@@ -9,24 +10,31 @@
     app:contentPadding="5dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <devilsen.me.emojicreator.widget.RatioImageView
+        <!--<devilsen.me.emojicreator.widget.RatioImageView-->
+        <!--android:id="@+id/list_item_img"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:adjustViewBounds="true"-->
+        <!--android:minHeight="100dp"-->
+        <!--android:minWidth="100dp" />-->
+
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/list_item_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:adjustViewBounds="true"
-            android:minHeight="100dp"
-            android:minWidth="100dp" />
+            android:layout_gravity="center_horizontal"
+            fresco:placeholderImage="@drawable/ic_account_circle_grey_700_24dp" />
 
         <TextView
             android:id="@+id/list_item_name_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:gravity="center_horizontal" />
     </LinearLayout>
