add upload activity and empty view

--- a/app/src/main/res/layout/fragment_good_luck.xml
+++ b/app/src/main/res/layout/fragment_good_luck.xml
@@ -33,7 +33,7 @@
         app:layout_scrollFlags="scroll|enterAlways" />
 
     <include
-        android:id="@+id/empty_layout"
+        android:id="@+id/layout_empty"
         layout="@layout/view_empty"
         android:visibility="gone" />
 
