--- a/app/src/main/res/layout/view_empty.xml
+++ b/app/src/main/res/layout/view_empty.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@mipmap/emoji_creator_icon_empty" />
+        android:background="@mipmap/ic_list_empty" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,6 +16,6 @@
         android:layout_marginBottom="50dp"
         android:layout_marginTop="10dp"
         android:text="@string/no_emoji"
-        android:textSize="18sp" />
+        android:textSize="16sp" />
 
 </LinearLayout>
