--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menu_upload"
+        android:icon="@drawable/ic_vertical_align_top_white_24dp"
+        android:title="@string/upload"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/menu_search"
         android:icon="@mipmap/ic_search"
         android:title="@string/search"
