--- a/app/src/main/res/layout/fragment_good_luck.xml
+++ b/app/src/main/res/layout/fragment_good_luck.xml
@@ -30,6 +30,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"
         android:src="@mipmap/ic_refresh_white_24dp"
+        android:visibility="gone"
         app:layout_scrollFlags="scroll|enterAlways" />
 
     <include
