--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#dedede</color>
+    <color name="title_gray">#b5ffffff</color>
     <color name="unenable">#969595</color>
 
     <color name="select_color_1">#33b5e5</color>
